# ssafy-llm-judge-bias

./: .gitignore  LICENSE  README.md  challenges-extended.json  challenges.json  gladiator.py  human_baseline.py  logickor_fight.py  logickor_judge.py  pyproject.toml  replay_judge.py  restyle.py
results/: ANALYSIS.md  ANALYSIS_logickor.md  ANALYSIS_v2.md  ANALYSIS_v3_human.md
results/battle_20260516_134437_judge-gpt5/: _SUMMARY.md  _results.json  code-1.md  code-10.md  code-2.md  code-3.md  code-4.md  code-5.md  code-6.md  code-7.md  code-8.md  code-9.md  creative-1.md  creative-10.md  creative-2.md  creative-3.md  creative-4.md  creative-5.md  creative-6.md  creative-7.md  creative-8.md  creative-9.md  korean-1.md  korean-10.md  korean-2.md  korean-3.md  korean-4.md  korean-5.md  korean-6.md  korean-7.md  korean-8.md  korean-9.md  reasoning-1.md  reasoning-10.md  reasoning-2.md  reasoning-3.md  reasoning-4.md  reasoning-5.md  reasoning-6.md  reasoning-7.md  (+12 more)
results/battle_20260516_134439_judge-claude/: _SUMMARY.md  _results.json  code-1.md  code-10.md  code-2.md  code-3.md  code-4.md  code-5.md  code-6.md  code-7.md  code-8.md  code-9.md  creative-1.md  creative-10.md  creative-2.md  creative-3.md  creative-4.md  creative-5.md  creative-6.md  creative-7.md  creative-8.md  creative-9.md  korean-1.md  korean-10.md  korean-2.md  korean-3.md  korean-4.md  korean-5.md  korean-6.md  korean-7.md  korean-8.md  korean-9.md  reasoning-1.md  reasoning-10.md  reasoning-2.md  reasoning-3.md  reasoning-4.md  reasoning-5.md  reasoning-6.md  reasoning-7.md  (+12 more)
(+682 files in other folders)
